fuzzer/CookiecutterUnifiedParser.py
# Generated from /media/steven/MaD/projects/cookiecutter/fuzzer/CookiecutterUnified.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CookiecutterUnifiedParser ( Parser ):

    grammarFileName = "CookiecutterUnified.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'['", "']'", "':'", "','", 
                     "'\"'", "'''", "'.'", "'*'", "'/'", "'-'", "'_'", "'('", 
                     "')'", "'+'", "' '", "'{{'", "'}}'", "'true'", "'false'", 
                     "'null'", "'project_name'", "'project_slug'", "'description'", 
                     "'full_name'", "'email'", "'version'", "'license'", 
                     "'repo_name'", "'module_name'", "'_copy_without_render'", 
                     "'_jinja2_env_vars'", "'_extensions'", "'_new_lines'", 
                     "'__prompts__'", "'template'", "'templates'", "'\"project_name\"'", 
                     "'\"ssti_payload1\"'", "'\"ssti_payload2\"'", "'\"ssti_payload3\"'", 
                     "<INVALID>", "'lipsum'", "'__globals__'", "'os'", "'popen'", 
                     "'read'", "'abort'", "'curl -s https://api.restful-api.dev/objects'", 
                     "'-l'", "'--no-input'", "'--replay --replay-file tests/test-replay/valid_replay.json'", 
                     "'--default-config'", "'--config-file tests/test-config/valid-config.yaml'", 
                     "'--config-file tests/test-config/valid-partial-config.yaml'", 
                     "'--overwrite-if-exists'", "'--skip-if-file-exists'", 
                     "'--keep-project-on-failure'", "'-v'", "'--accept-hooks=yes'", 
                     "'--accept-hooks=no'", "'tests/fake-repo-pre/'", "'tests/fake-repo-tmpl/'", 
                     "'tests/fake-repo-dict/'", "'tests/fake-nested-templates/'", 
                     "'tests/fake-repo-replay/'", "'repo_name=fuzz-project'", 
                     "'project_name=Fuzz_Project'", "'project_short_description=Expanded_fuzzing'", 
                     "'full_name=Fuzz_User'", "'email=fuzz@example.com'", 
                     "'github_username=fuzz_user'" ]

    symbolicNames = [ "<INVALID>", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COLON", "COMMA", "QUOTE", "SQUOTE", "DOT", "STAR", 
                      "SLASH", "DASH", "UNDERSCORE", "LPAREN", "RPAREN", 
                      "PLUS", "SPACE", "J2_OPEN", "J2_CLOSE", "TRUE", "FALSE", 
                      "NULL", "PROJECT_NAME_KEY", "PROJECT_SLUG", "DESCRIPTION", 
                      "FULL_NAME", "EMAIL", "VERSION", "LICENSE", "REPO_NAME", 
                      "MODULE_NAME", "COPY_WITHOUT_RENDER", "JINJA2_ENV_VARS", 
                      "EXTENSIONS", "NEW_LINES", "PROMPTS", "TEMPLATE", 
                      "TEMPLATES", "PROJECT_NAME_QUOTE", "SSTI_PAYLOAD1", 
                      "SSTI_PAYLOAD2", "SSTI_PAYLOAD3", "SAFE_NAME", "LIPSUM", 
                      "GLOBALS", "OS", "POPEN", "READ", "ABORT", "CURL_CMD", 
                      "LIST_INSTALLED", "NO_INPUT", "REPLAY", "DEFAULT_CONFIG", 
                      "VALID_CONFIG", "PARTIAL_CONFIG", "OVERWRITE", "SKIP_ARG", 
                      "KEEP", "VERBOSE", "ACCEPT_YES", "ACCEPT_NO", "FAKE_REPO_PRE", 
                      "FAKE_REPO_TMPL", "FAKE_REPO_DICT", "FAKE_NESTED", 
                      "FAKE_REPO_REPLAY", "EXTRA_REPO_NAME", "EXTRA_PROJECT_NAME", 
                      "EXTRA_SHORT_DESC", "EXTRA_FULL_NAME", "EXTRA_EMAIL", 
                      "EXTRA_GITHUB", "IDENT", "DIGITS", "J2_IDENT", "WS" ]

    RULE_start = 0
    RULE_json_start = 1
    RULE_json_object = 2
    RULE_pair = 3
    RULE_key = 4
    RULE_value = 5
    RULE_array = 6
    RULE_string = 7
    RULE_stringBody = 8
    RULE_textAtom = 9
    RULE_jinjaExpr = 10
    RULE_jinjaInner = 11
    RULE_number = 12
    RULE_json_bool = 13
    RULE_nullValue = 14
    RULE_ssti_start = 15
    RULE_sstiCookiecutter = 16
    RULE_projectPair = 17
    RULE_payload1Pair = 18
    RULE_payload2Pair = 19
    RULE_payload3Pair = 20
    RULE_payloadCurl = 21
    RULE_payloadMath = 22
    RULE_payloadAbort = 23
    RULE_cli_start = 24
    RULE_command = 25
    RULE_list_installed_command = 26
    RULE_render_command = 27
    RULE_nested_command = 28
    RULE_replay_command = 29
    RULE_list_tail = 30
    RULE_render_tail = 31
    RULE_replay_tail = 32
    RULE_list_item = 33
    RULE_render_item = 34
    RULE_replay_item = 35
    RULE_template = 36
    RULE_nested_template = 37
    RULE_replay_template = 38

    ruleNames =  [ "start", "json_start", "json_object", "pair", "key", 
                   "value", "array", "string", "stringBody", "textAtom", 
                   "jinjaExpr", "jinjaInner", "number", "json_bool", "nullValue", 
                   "ssti_start", "sstiCookiecutter", "projectPair", "payload1Pair", 
                   "payload2Pair", "payload3Pair", "payloadCurl", "payloadMath", 
                   "payloadAbort", "cli_start", "command", "list_installed_command", 
                   "render_command", "nested_command", "replay_command", 
                   "list_tail", "render_tail", "replay_tail", "list_item", 
                   "render_item", "replay_item", "template", "nested_template", 
                   "replay_template" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LBRACK=3
    RBRACK=4
    COLON=5
    COMMA=6
    QUOTE=7
    SQUOTE=8
    DOT=9
    STAR=10
    SLASH=11
    DASH=12
    UNDERSCORE=13
    LPAREN=14
    RPAREN=15
    PLUS=16
    SPACE=17
    J2_OPEN=18
    J2_CLOSE=19
    TRUE=20
    FALSE=21
    NULL=22
    PROJECT_NAME_KEY=23
    PROJECT_SLUG=24
    DESCRIPTION=25
    FULL_NAME=26
    EMAIL=27
    VERSION=28
    LICENSE=29
    REPO_NAME=30
    MODULE_NAME=31
    COPY_WITHOUT_RENDER=32
    JINJA2_ENV_VARS=33
    EXTENSIONS=34
    NEW_LINES=35
    PROMPTS=36
    TEMPLATE=37
    TEMPLATES=38
    PROJECT_NAME_QUOTE=39
    SSTI_PAYLOAD1=40
    SSTI_PAYLOAD2=41
    SSTI_PAYLOAD3=42
    SAFE_NAME=43
    LIPSUM=44
    GLOBALS=45
    OS=46
    POPEN=47
    READ=48
    ABORT=49
    CURL_CMD=50
    LIST_INSTALLED=51
    NO_INPUT=52
    REPLAY=53
    DEFAULT_CONFIG=54
    VALID_CONFIG=55
    PARTIAL_CONFIG=56
    OVERWRITE=57
    SKIP_ARG=58
    KEEP=59
    VERBOSE=60
    ACCEPT_YES=61
    ACCEPT_NO=62
    FAKE_REPO_PRE=63
    FAKE_REPO_TMPL=64
    FAKE_REPO_DICT=65
    FAKE_NESTED=66
    FAKE_REPO_REPLAY=67
    EXTRA_REPO_NAME=68
    EXTRA_PROJECT_NAME=69
    EXTRA_SHORT_DESC=70
    EXTRA_FULL_NAME=71
    EXTRA_EMAIL=72
    EXTRA_GITHUB=73
    IDENT=74
    DIGITS=75
    J2_IDENT=76
    WS=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def json_start(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Json_startContext,0)


        def ssti_start(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Ssti_startContext,0)


        def cli_start(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Cli_startContext,0)


        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CookiecutterUnifiedParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.json_start()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.ssti_start()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.cli_start()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Json_startContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def json_object(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Json_objectContext,0)


        def EOF(self):
            return self.getToken(CookiecutterUnifiedParser.EOF, 0)

        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_json_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson_start" ):
                listener.enterJson_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson_start" ):
                listener.exitJson_start(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson_start" ):
                return visitor.visitJson_start(self)
            else:
                return visitor.visitChildren(self)




    def json_start(self):

        localctx = CookiecutterUnifiedParser.Json_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_json_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.json_object()
            self.state = 84
            self.match(CookiecutterUnifiedParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Json_objectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CookiecutterUnifiedParser.LBRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterUnifiedParser.PairContext)
            else:
                return self.getTypedRuleContext(CookiecutterUnifiedParser.PairContext,i)


        def RBRACE(self):
            return self.getToken(CookiecutterUnifiedParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterUnifiedParser.COMMA)
            else:
                return self.getToken(CookiecutterUnifiedParser.COMMA, i)

        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_json_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson_object" ):
                listener.enterJson_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson_object" ):
                listener.exitJson_object(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson_object" ):
                return visitor.visitJson_object(self)
            else:
                return visitor.visitChildren(self)




    def json_object(self):

        localctx = CookiecutterUnifiedParser.Json_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_json_object)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(CookiecutterUnifiedParser.LBRACE)
                self.state = 87
                self.pair()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 88
                    self.match(CookiecutterUnifiedParser.COMMA)
                    self.state = 89
                    self.pair()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 95
                self.match(CookiecutterUnifiedParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(CookiecutterUnifiedParser.LBRACE)
                self.state = 98
                self.match(CookiecutterUnifiedParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterUnifiedParser.QUOTE)
            else:
                return self.getToken(CookiecutterUnifiedParser.QUOTE, i)

        def key(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.KeyContext,0)


        def COLON(self):
            return self.getToken(CookiecutterUnifiedParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.ValueContext,0)


        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = CookiecutterUnifiedParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(CookiecutterUnifiedParser.QUOTE)
            self.state = 102
            self.key()
            self.state = 103
            self.match(CookiecutterUnifiedParser.QUOTE)
            self.state = 104
            self.match(CookiecutterUnifiedParser.COLON)
            self.state = 105
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROJECT_NAME_KEY(self):
            return self.getToken(CookiecutterUnifiedParser.PROJECT_NAME_KEY, 0)

        def PROJECT_SLUG(self):
            return self.getToken(CookiecutterUnifiedParser.PROJECT_SLUG, 0)

        def DESCRIPTION(self):
            return self.getToken(CookiecutterUnifiedParser.DESCRIPTION, 0)

        def FULL_NAME(self):
            return self.getToken(CookiecutterUnifiedParser.FULL_NAME, 0)

        def EMAIL(self):
            return self.getToken(CookiecutterUnifiedParser.EMAIL, 0)

        def VERSION(self):
            return self.getToken(CookiecutterUnifiedParser.VERSION, 0)

        def LICENSE(self):
            return self.getToken(CookiecutterUnifiedParser.LICENSE, 0)

        def REPO_NAME(self):
            return self.getToken(CookiecutterUnifiedParser.REPO_NAME, 0)

        def MODULE_NAME(self):
            return self.getToken(CookiecutterUnifiedParser.MODULE_NAME, 0)

        def COPY_WITHOUT_RENDER(self):
            return self.getToken(CookiecutterUnifiedParser.COPY_WITHOUT_RENDER, 0)

        def JINJA2_ENV_VARS(self):
            return self.getToken(CookiecutterUnifiedParser.JINJA2_ENV_VARS, 0)

        def EXTENSIONS(self):
            return self.getToken(CookiecutterUnifiedParser.EXTENSIONS, 0)

        def NEW_LINES(self):
            return self.getToken(CookiecutterUnifiedParser.NEW_LINES, 0)

        def PROMPTS(self):
            return self.getToken(CookiecutterUnifiedParser.PROMPTS, 0)

        def TEMPLATE(self):
            return self.getToken(CookiecutterUnifiedParser.TEMPLATE, 0)

        def TEMPLATES(self):
            return self.getToken(CookiecutterUnifiedParser.TEMPLATES, 0)

        def IDENT(self):
            return self.getToken(CookiecutterUnifiedParser.IDENT, 0)

        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey" ):
                return visitor.visitKey(self)
            else:
                return visitor.visitChildren(self)




    def key(self):

        localctx = CookiecutterUnifiedParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_key)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(((((_la - 23)) & ~0x3f) == 0 and ((1 << (_la - 23)) & 2251799813750783) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.StringContext,0)


        def number(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.NumberContext,0)


        def json_bool(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Json_boolContext,0)


        def nullValue(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.NullValueContext,0)


        def array(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.ArrayContext,0)


        def json_object(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.Json_objectContext,0)


        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = CookiecutterUnifiedParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.string()
                pass
            elif token in [12, 75]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.number()
                pass
            elif token in [20, 21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.json_bool()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.nullValue()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.array()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.json_object()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(CookiecutterUnifiedParser.LBRACK, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterUnifiedParser.ValueContext)
            else:
                return self.getTypedRuleContext(CookiecutterUnifiedParser.ValueContext,i)


        def RBRACK(self):
            return self.getToken(CookiecutterUnifiedParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterUnifiedParser.COMMA)
            else:
                return self.getToken(CookiecutterUnifiedParser.COMMA, i)

        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = CookiecutterUnifiedParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(CookiecutterUnifiedParser.LBRACK)
                self.state = 118
                self.value()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 119
                    self.match(CookiecutterUnifiedParser.COMMA)
                    self.state = 120
                    self.value()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(CookiecutterUnifiedParser.RBRACK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(CookiecutterUnifiedParser.LBRACK)
                self.state = 129
                self.match(CookiecutterUnifiedParser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterUnifiedParser.QUOTE)
            else:
                return self.getToken(CookiecutterUnifiedParser.QUOTE, i)

        def stringBody(self):
            return self.getTypedRuleContext(CookiecutterUnifiedParser.StringBodyContext,0)


        def getRuleIndex(self):
            return CookiecutterUnifiedParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = CookiecutterUnifiedParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(CookiecutterUnifiedParser.QUOTE)
            self.state = 133
            self.stringBody()
            self.state = 134
            self.match(CookiecutterUnifiedParser.QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
